--- a/css/representadas.css
+++ b/css/representadas.css
@@ -27,7 +27,7 @@
     width: 33%;
     height: 3px;
     border-radius: 30px;
-    background-color: var(--amarelo);
+    background-color: var(--cor1);
 }
 .representadas .row .logos {
     display: flex;
@@ -61,6 +61,6 @@
         width: 33%;
         height: 3px;
         border-radius: 30px;
-        background-color: var(--amarelo);
+        background-color: var(--cor1);
     }
 }
