site no ar 27 03 24 12:00

--- a/css/footer.css
+++ b/css/footer.css
@@ -11,6 +11,9 @@
     justify-content: center;
     align-items: center;
 }
+.footer .row .logo img{
+    width: 80%;
+}
 .footer .row .links{
     display: flex;
     flex-direction: column;
